@@ -1413,6 +1413,12 @@ CBTMSGS=OFF
 # AUTOPURGE
 # Disables the player purging system
 #
+# DARKNIGHTS
+# Disables the making of all outdoor rooms dark when night falls.
+#
+# DARKWEATHER
+# Disables the making of all outdoor rooms dark during blizzards and duststorms
+#
 # EQUIPSIZE
 # Disables the equipment sizing system in the game. 
 #
@@ -1439,7 +1445,8 @@ CBTMSGS=OFF
 #    ROOMVISITS, MAXCONNSPERIP, RANDOMITEMS, MCCP, MXP, MSP, FATGRIDS,
 #    FATAREAS, LOGINS, THREADTHREAD, JOURNALTHREAD, MAPTHREAD, MSSP,
 #    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, SMTPCLIENT
-#    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT
+#    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT,
+#    RESPAWNTHREAD
 DISABLE=
 
 # The DEBUG flag should be used only by developers who want lots of
@@ -1449,7 +1456,7 @@ DISABLE=
 #    DBROOMS, CMROIT, CMROEX, CMROCH, CMROOM, CMAREA, CMSTAT, SMTPSERVER
 #    SMTPCLIENT, AUTOPURGE, CONQUEST, ARREST, TELNET, CLASSLOADER, VACUUM,
 #    DBROOMPOP, POLLCACHE, SAVETHREAD, UTLITHREAD, PROPERTY, MISSINGKIDS,
-#    CATALOGTHREAD, CATALOGCACHE, OUTPUT, HTTPACCESS
+#    CATALOGTHREAD, CATALOGCACHE, OUTPUT, HTTPACCESS, RESPAWNTHREAD
 DEBUG=
 
 # NOCACHE is a list, seperated by commas, of which internal
@@ -1610,7 +1617,7 @@ SOFTWARE=%DEFAULT%
 # FLAGS,OBJBUILDERS,SESSIONS,TELNET,XML,SOCIALS,UTENSILS,STATS,
 # MAP,QUEST,ABLEMAP,ENCODER,SMTP,DICE,FACTIONS,CLANS,POLLS,
 # TIME,COLOR,LOGIN,TIMS,LEVELS,EXPERTISES,MATERIALS,LEGAL,
-# LANGUAGE,CATALOG,PLAYERS,TITLES
+# LANGUAGE,CATALOG,PLAYERS,TITLES,RESPAWN
 #
 # Valid class entries include:
 # DBVFS,RACE,CHARCLASS,MOB,ABILITY,LOCALE,EXIT,ITEM,BEHAVIOR,
